syntax = "proto3";
package monitor.proto;


message CpuLoad
{
    float lavg_1 = 1; //1分钟平均负载 
    float lavg_3 = 2; //3分钟平均负载 
    float lavg_15 = 3; //15分钟平均负载 
}